# auxide-midi

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DCO.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  SPONSORS.md
.github/workflows/: CI.yml
examples/: list_devices.rs  note_echo.rs  poly_synth.rs  poly_synth.rs.bak
src/: cc_mapping.rs  conversions.rs  lib.rs  midi_input.rs  smoother.rs  voice_allocator.rs  voice_state.rs
tarpaulin/: tarpaulin-report.html
tests/: cc_mapping_tests.rs  conversions_tests.rs  integration_tests.rs  midi_parsing_tests.rs  voice_allocator_tests.proptest-regressions  voice_allocator_tests.rs
