[package]
name = "auxide-midi"
version = "0.2.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "MIDI input and polyphonic synthesizer integration for Auxide DSP graphs"
keywords = ["midi", "synthesizer", "polyphonic", "real-time", "dsp"]
categories = ["multimedia::audio", "api-bindings"]
repository = "https://github.com/Michael-A-Kuykendall/auxide-midi"

[features]
default = []

[dependencies]
auxide = "0.3"
auxide-dsp = "0.2"
auxide-io = "0.2"
midir = "0.9"
crossbeam-channel = "0.5"
ctrlc = "3.4"
anyhow = "1.0"

[dev-dependencies]
proptest = "1.0"

[[example]]
name = "list_devices"

[[example]]
name = "note_echo"

[[example]]
name = "poly_synth"